# itmo-mops-2024

./: README.md  compile.py  docker-compose.yml  filebeat.yml  logstash.conf  messages.proto  prometheus.yml  useful-commands.txt
controller/: Dockerfile  entrypoint.sh  pyproject.toml
controller/src/controller/: database.py  main.py  prometheus.py  rabbitmq.py  routes.py
data_message/: __init__.py  data_message.proto  data_message_pb2.py
datasim/: Dockerfile  pyproject.toml
datasim/src/datasim/: main.py  prometheus.py
datasim/src/proto/: messages_pb2.py
datasim/src/tools/: messages.proto
iot_controller/: Dockerfile  main.py  requirements.txt
iot_data_simulator/: Dockerfile  __init__.py  data_simulator.py  main.py  requirements.txt
iot_data_simulator/data_simulator/: __init__.py  data_simulator.py
iot_proto_message/: __init__.py  data_message.proto  data_message_pb2.py
message_lib/: __init__.py
rule_engine/: Dockerfile  entrypoint.sh  pyproject.toml
rule_engine/src/proto/: compile.py  messages_pb2.py
rule_engine/src/rule_engine/: database.py  main.py  prometheus.py  rabbitmq.py
